# GLSLChecker

./: .gitignore  GLSLChecker.pro  LICENSE  README.md  block.json  glctxnotify.cpp  glsl.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  syntaxhighlighter.cpp  syntaxhighlighter.h  usercfg.json
defs/: builtin_function.json  builtin_input.json  builtin_output.json  number.json  param_qualifier.json  precision_qualifier.json  predef_macro.json  preprocessor.json  reserved.json  storage_qualifier.json  value.json
libglslhl/: CMakeLists.txt
libtinyhl/: glctxnotify.h  glsl.cpp  libtinyhl.pro  syntaxhighlighter.cpp  syntaxhighlighter.h
